update(Actions): add asset_content_type to release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,3 +46,4 @@ jobs:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./build/dcv
         asset_name: dcv
+        asset_content_type: application/x-mach-binary
